Swipe for mobile and ipad now

--- a/ProjectBank/Client/Pages/Swipe.razor
+++ b/ProjectBank/Client/Pages/Swipe.razor
@@ -20,6 +20,10 @@
 </button>
 @*<input id="slider" type="range" min="1" max="100" value="50" onchange=""/>*@
 
+<div class="landscape_view_mobile">
+    <span class="oi oi-loop-square"></span><br>
+    <p1> Please turn your phone vertical</p1>
+</div>
 
 @if (!_seenProjectIds.Any())
 {
