My Profile edit and delete projects

--- a/ProjectBank/Client/Pages/Swipe.razor
+++ b/ProjectBank/Client/Pages/Swipe.razor
@@ -7,11 +7,10 @@
 @inject NavigationManager _navigationManager
 
 
-//
-// This RadzenNotification tag is necessary for the
-// NotificationService to work. Otherwise the service is still available,
-// however, the notifications will never be shown.
-//
+
+@*This RadzenNotification tag is necessary for the
+NotificationService to work. Otherwise the service is still available,
+however, the notifications will never be shown.*@
 <RadzenNotification/>
 
 
