--- a/ProjectBank/Client/Pages/MyProfile.razor
+++ b/ProjectBank/Client/Pages/MyProfile.razor
@@ -41,7 +41,7 @@
 <h3 style="text-decoration: underline">My project ideas :</h3>
 @if (_userProjects.Any())
 {
-    <table class="table table-striped" style="color: white">
+    <table class="table table-striped" style="color: white; display: flow">
         <thead>
         <tr>
             <th>Title</th>
@@ -54,7 +54,7 @@
                 <td><x onclick="@(() => _navigationManager.NavigateTo($"/projects/{project?.Id}"))" style="cursor: pointer;">@project?.Title</x></td>
                 <td>
                     <div class="my_project_options">
-                        <button id="edit_my_project" style="display: none" @onclick=""></button>
+                        <button id="edit_my_project" style="display: none" @onclick="e => UpdateProject(project!.Id)"></button>
                         <label for="edit_my_project" class="oi oi-pencil"></label>
                     <button id="delete_My_project" style="display: none" IsBusy=@_busyProfile @onclick="(e => DeleteProject(project!.Id))"></button>
                     <label for="delete_My_project" class="oi oi-trash"></label>
