--- a/ProjectBank/Client/_Imports.razor
+++ b/ProjectBank/Client/_Imports.razor
@@ -14,6 +14,7 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
 @using ProjectBank.Client
 @using ProjectBank.Client.Shared
+@using ProjectBank.Client.Scripts
 @using ProjectBank.Core.DTO
 @using ProjectBank.Core.Enum
 @using ProjectBank.Core.RepositoryInterface
