--- a/ProjectBank/Client/Pages/EditProject.razor
+++ b/ProjectBank/Client/Pages/EditProject.razor
@@ -15,7 +15,7 @@
             <RadzenLabel Text="Title:"/>
         </div>
         <div class="col-md-9">
-            <RadzenTextBox Disabled=false Placeholder="Choose a title" @bind-Value="_project.Title" Change=@(args => OnChange(args, "TextArea with placeholder")) style="width: 50%;" Name="ProjectName"/>
+            <RadzenTextBox MaxLength=100 Disabled=false Placeholder="Choose a title" @bind-Value="_project.Title" Change=@(args => OnChange(args, "TextArea with placeholder")) style="width: 50%;" Name="ProjectName"/>
         </div>
     </div>
     <div class="row">
@@ -23,7 +23,7 @@
             <RadzenLabel Text="Description:"/>
         </div>
         <div class="col-md-9">
-            <RadzenTextArea Placeholder="Enter here..." @bind-Value="_project.Description" Change=@(args => OnChange(args, "TextArea with placeholder")) Style="height:200px" Class="w-100"/>
+            <RadzenTextArea MaxLength=500 Placeholder="Enter here..." @bind-Value="_project.Description" Change=@(args => OnChange(args, "TextArea with placeholder")) Style="height:200px" Class="w-100"/>
         </div>
     </div>
     <div class="row">
