--- a/ProjectBank/Client/Shared/MainLayout.razor.css
+++ b/ProjectBank/Client/Shared/MainLayout.razor.css
@@ -14,11 +14,11 @@ main {
 
 .top-row {
     background-color: #212121;
-    /*border-bottom: 1px solid #d6d5d5;*/
     justify-content: flex-end;
     height: 3.5rem;
     display: flex;
     align-items: center;
+    position: fixed;
 }
 
     .top-row ::deep a, .top-row ::deep .btn-link {
