--- a/ProjectBank/Client/wwwroot/css/search.css
+++ b/ProjectBank/Client/wwwroot/css/search.css
@@ -1,18 +1,17 @@
 .search_container{
-    position: relative;
-    left: 19%;
-    
+    display: grid;
+    justify-content: center;
+    justify-items: center;
 }
 .searchBar{
     position: relative;
     padding: 0;
-    width: 50%;
+    width: 30em;
     height: 50px;
     margin: 0;
     background-color: #fff;
     border: none;
     outline: none;
-    
 }
 
 input[type=text]{
@@ -31,6 +30,13 @@ input[type=text]{
     border-top-right-radius: 10px;
 }
 
+.filter_wrapper{
+    display: grid;
+    width: 100%;
+    justify-items: left;
+    left: 0;
+}
+
 .dropdown_menu_filter{
      position: relative;
      background: white;
@@ -42,10 +48,12 @@ input[type=text]{
      right: 1px;
      top: 1px;
  }
+
 .drop_filter_content{
     margin-left: 10px;
     margin-right: 10px;
 }
+
 .filter_btn{
     position: relative;
     height: 50px;
@@ -132,7 +140,7 @@ input[type=text]{
     position: relative;
     float: right;
     padding-top: 5px;
-    margin-right: 15px;
+    margin-right: 10px;
 }
 
 .project_builder_search .project_search_content .like_star .star_checkbox{
@@ -203,5 +211,149 @@ input[type=text]{
 
 .to_top_button:hover{
     background-color: #ffffff;
+}
+
+
+
+@media(max-width: 767.99px){
+   .searchBar{
+       width: 10em;
+       height: 2em;
+   }
+
+    input[type=text]{
+        font-size: 12pt;
+    }
+    
+    .filter_btn{
+        font-size: 12pt;
+        height: 2em;
+        border-bottom-left-radius: 10px;
+    }
+    
+    .btn_search{
+        font-size: 12pt;
+        height: 2em;
+        width: 2em;
+    }
+    
+    .project_builder_search{
+        width: 16em;
+    }
+    
+
+    .project_builder_search .project_search_content .project_search_description {
+        width: 19em;
+    }
+
+    .project_builder_search .project_search_content .project_search_keywords {
+        width: 19em;
+    }
+
+    .project_builder_search .project_search_content #project_search_title{
+        font-size: 12pt;
+        width: 13em;
+    }
+
+    .project_builder_search .project_search_content #search_supervisor x{
+        text-decoration: underline;
+    }
+    
+    .to_top_button{
+        right: 1em;
+        bottom: 1em;
+    }
+
+    .project_builder_search .project_search_content .see_more, .close_more{
+        text-decoration: underline;
+    }
+    
+}
+
+/*Small devices (landscape phones, and portrait tablets)*/
+@media (min-width: 768px) and (max-width: 991.99px){
+    .searchBar{
+        width: 27em;
+        height: 2.5em;
+    }
+
+    input[type=text]{
+        font-size: 12pt;
+    }
+
+    .filter_btn{
+        font-size: 12pt;
+        height: 2.5em;
+        border-bottom-left-radius: 10px;
+    }
+
+    .btn_search{
+        font-size: 12pt;
+        height: 2.5em;
+        width: 2.5em;
+    }
+
+    .project_builder_search{
+        width: 30em;
+    }
+
+
+    .project_builder_search .project_search_content .project_search_description {
+        width: 26em;
+        font-size: 13pt;
+    }
+
+    .project_builder_search .project_search_content .project_search_keywords {
+        width: 26em;
+        height: 5em;
+        font-size: 13pt;
+    }
+
+    .project_builder_search .project_search_content #project_search_title{
+        font-size: 16pt;
+        width: 19em;
+    }
+
+    .project_builder_search .project_search_content #search_supervisor{
+        font-size: 13pt;
+    }
+    
+    .project_builder_search .project_search_content #search_supervisor x{
+        text-decoration: underline;
+        
+    }
+
+    .to_top_button{
+        right: 1em;
+        bottom: 1em;
+        height: 3em;
+        width: 3em;
+    }
+    
+    .to_top_button #to_top_label{
+        font-size: x-large;
+    }
+
+    .project_builder_search .project_search_content .see_more, .close_more{
+        text-decoration: underline;
+        font-size: 12pt;
+    }
+
+    .project_builder_search .project_search_content .like_star .oi-star{
+        font-size: 2.5em;
+    }
+
+    .project_search_Ects, .project_search_degree{
+        font-size: 13pt;
+    }
+
+
+}
+
+/*Medium devices (tablets, landscape view )*/
+@media (min-width: 992px) and (max-width: 1199.97px){
+}
+@media (min-width: 1200px) {
+
 }
 
