--- a/ProjectBank/Client/Shared/ImageUploader.razor
+++ b/ProjectBank/Client/Shared/ImageUploader.razor
@@ -35,8 +35,15 @@ else
 }
 else //make a preview of profile picture.
 {
+    @if (!string.IsNullOrWhiteSpace(_imageUrl))
+    {
+        UploadImage();
+    }
     <div>
-        
+        @if (_sizeExceeded)
+                {
+                    <div style="display: flex; justify-content: center; align-content: center; padding: 1em; color: red">Maximum file size of 1.24 mb exceded.</div>
+                }
     </div>
 }
 @code {
