--- a/ProjectBank/Client/Pages/Swipe.razor
+++ b/ProjectBank/Client/Pages/Swipe.razor
@@ -1,4 +1,4 @@
-@page "/swipe/{keyword}/{degreeInt:int}"
+@page "/swipe/{keyword}"
 @inject HttpClient Http
 @using System.Security.Claims
 @inject AuthenticationStateProvider AuthenticationStateProvider
@@ -7,11 +7,10 @@
 @inject NavigationManager _navigationManager
 
 
-//
-// This RadzenNotification tag is necessary for the
-// NotificationService to work. Otherwise the service is still available,
-// however, the notifications will never be shown.
-//
+
+@*This RadzenNotification tag is necessary for the
+NotificationService to work. Otherwise the service is still available,
+however, the notifications will never be shown.*@
 <RadzenNotification/>
 
 
@@ -24,6 +23,10 @@
           'To skip a project; you must click the`X` \r\n \r\n' +
           'To regret/undo your last decision; you can click the button in the middle, displayed with a circled arrow. Further, the rewatch button lets you scroll back through already seen projects.')">i
 </button>
+<div class="landscape_view_mobile">
+    <span class="oi oi-loop-square"></span><br>
+    <p1> Please turn your phone vertical</p1>
+</div>
 
 @if (!_seenProjectIds.Any())
 {
