--- a/ProjectBank/Client/Shared/MainLayout.razor.css
+++ b/ProjectBank/Client/Shared/MainLayout.razor.css
@@ -14,11 +14,11 @@ main {
 
 .top-row {
     background-color: #212121;
-    /*border-bottom: 1px solid #d6d5d5;*/
     justify-content: flex-end;
     height: 3.5rem;
     display: flex;
     align-items: center;
+    position: fixed;
 }
 
     .top-row ::deep a, .top-row ::deep .btn-link {
@@ -37,8 +37,8 @@ main {
         text-overflow: ellipsis;
     }
 
-@media (max-width: 640.98px) {
-    .top-row:not(.auth) {
+@media (max-width: 992px) {
+    .top-row {
         display: none;
     }
 
@@ -51,7 +51,7 @@ main {
     }
 }
 
-@media (min-width: 641px) {
+@media (min-width: 992px) {
     .page {
         flex-direction: row;
     }
